src/components/ButtonSubmit/ButtonSubmit.scss
@use '/src/styles/variables' as *;

.button-submit{
    position: relative;
    background-color: $clr-purple-600;
    padding: 1rem;
    border: 0;
    border-radius: 12px;
    font-size: 1.125rem;
    font-weight: 600;
}
.button-submit:hover{
    cursor: pointer;
    box-shadow: hsla(0, 0%, 100%,.15) 1px 1px 20px 2px;
}
[data-theme='light'] .button-submit:hover{
    box-shadow: hsla(0, 0%, 0%, 0.4) 1px 1px 20px 2px;
}
.button-submit.disabled::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: hsla(0, 0%, 100%, 0.5);
    pointer-events: none;
    border-radius: 12px;
}
.button-submit.disabled:hover{
    cursor: not-allowed;
}
.tooltip{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: .5rem;
    font-size: 1.125rem;
    font-weight: 500;
}
.error-icon{
    width: 1.5rem;
    height: 1.5rem;
}
.hidden{
    display: none;
}

@media (min-width: $br-tablet){
    .tooltip{
        font-size: 1.5rem;
        font-weight: 400;
    }
    .error-icon{
        width: 1.875rem;
    }
}

